[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/grid_world.gd" id="1"]
[ext_resource type="Script" path="res://scripts/modules/GridRealtimeRenderer.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/GridLogic.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/grid/grid_interactor.gd" id="4"]

[node name="WorldRoot" type="Node2D"]
script = ExtResource("1")

[node name="GridRealtimeRenderer" type="Node2D" parent="."]
script = ExtResource("2")

[node name="GridLogic" parent="." instance=ExtResource("3")]

[node name="GridInteractor" type="Node2D" parent="."]
script = ExtResource("4")
